ADD_EXECUTABLE(mri_gui.wt
  MRIGuiApp.C
)
TARGET_LINK_LIBRARIES(mri_gui.wt wt ${EXAMPLES_CONNECTOR} ${BOOST_WT_LIBRARIES})

INCLUDE_DIRECTORIES(
  ${WT_SOURCE_DIR}/src
)

#
# Create a deploy script
#
SET(APPNAME mri_gui)
SET(APPBIN mri_gui.wt)
SET(APPRESOURCES "${CMAKE_CURRENT_SOURCE_DIR}/icons ${CMAKE_CURRENT_SOURCE_DIR}/*.xml ${CMAKE_CURRENT_SOURCE_DIR}/*.css")
#CONFIGURE_FILE(
#  ${WT_SOURCE_DIR}/deploy.sh
#  ${CMAKE_CURRENT_BINARY_DIR}/deploy.sh
#)

ADD_DEPENDENCIES(mri_gui.wt wt ${EXAMPLES_CONNECTOR})

